Fix(styles): light mode for dark mode fixed

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ button:active {
   text-shadow: 2px 2px 2px rgb(255, 255, 255);
 }
 
-.slick-arrow.slick-next {
+.slick-arrow {
   display: none !important;
 }
 
